# gairdener

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  package-lock.json  package.json  plants.json  pyproject.toml  tsconfig.base.json  tsconfig.json
docs/: PLAN.md
src/gairdener/: prompts.py
src/gairdener/agents/: __init__.py  gardener.py
